result pudate Sunday 12th 2025

--- a/GAMES/12Mark-II.html
+++ b/GAMES/12Mark-II.html
@@ -3003,6 +3003,7 @@
                 </tr>
             </tbody>
 
+                        <!-- day1-->
             <tbody>
                 <tr>
                     <td class="serial-num">1</td>
@@ -3024,7 +3025,29 @@
                 </tr>
             </tbody>
 
-                                    <!-- day2-->
+                        <!-- day2-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">2</td>
+                    <td class="days"><small>Jan., Sun 12th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">14</td>
+                    <td class="winning">65</td>
+                    <td class="winning">74</td>
+                    <td class="winning">33</td>
+                    <td class="winning" id="lbw">16</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">63</td>
+                    <td class="machine">66</td>
+                    <td class="machine">39</td>
+                    <td class="machine">8</td>
+                    <td class="machine" id="lbm">7</td>
+                </tr>
+            </tbody>
+
+                         <!-- day-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
