--- a/GAMES/17Royal.html
+++ b/GAMES/17Royal.html
@@ -3000,7 +3000,8 @@
                 </tr>
             </tbody>
         </table>
-        <span>Royal</span>
+
+        <h4 style="color: #fff; width: 100%; text-align: center; background-color: #000; padding: 10px;">Year 2025</h4>
 
         <table>
             <caption>ROYAL</caption>
@@ -3103,6 +3104,28 @@
             </tbody>
 
                                     <!-- day3-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">3</td>
+                    <td class="days"><small>Jan., Sun 12th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">14</td>
+                    <td class="winning">22</td>
+                    <td class="winning">71</td>
+                    <td class="winning">88</td>
+                    <td class="winning" id="lbw">83</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">24</td>
+                    <td class="machine">85</td>
+                    <td class="machine">17</td>
+                    <td class="machine">42</td>
+                    <td class="machine" id="lbm">76</td>
+                </tr>
+            </tbody>
+
+
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
