--- a/GAMES/14Enugu.html
+++ b/GAMES/14Enugu.html
@@ -2947,7 +2947,7 @@
             </tbody>
         </table>
 
-        <h1>Year 2025</h1>
+        <h4 style="color: #fff; width: 100%; text-align: center; background-color: #000; padding: 10px;">Year 2025</h4>
 
         <table>
             <caption>Enugu</caption>
@@ -3025,6 +3025,28 @@
             </tbody>
 
                                     <!-- day2-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">2</td>
+                    <td class="days"><small>Jan., Sun 12th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">63</td>
+                    <td class="winning">25</td>
+                    <td class="winning">44</td>
+                    <td class="winning">14</td>
+                    <td class="winning" id="lbw">27</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">90</td>
+                    <td class="machine">81</td>
+                    <td class="machine">40</td>
+                    <td class="machine">85</td>
+                    <td class="machine" id="lbm">18</td>
+                </tr>
+            </tbody>
+
+                        <!-- day3-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
