update Tuesday 14th 2024

--- a/GAMES/14Enugu.html
+++ b/GAMES/14Enugu.html
@@ -3049,8 +3049,8 @@
                         <!-- day3-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">3</td>
+                    <td class="days"><small>Jan., Wed 14th</small></td>
                    
                     <!-- winning-->
                     <td class="winning"></td>
