--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -1518,11 +1518,11 @@
                     <td class="winning" id="lbw">23</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">52</td>
+                    <td class="machine">47</td>
+                    <td class="machine">82</td>
+                    <td class="machine">73</td>
+                    <td class="machine" id="lbm">80</td>
                 </tr>
             </tbody>
 
@@ -1570,7 +1570,6 @@
                 </tr>
             </tbody>
         </table>
-
     </main>
 </body>
 </html>
