--- a/GAMES/25Aseda.html
+++ b/GAMES/25Aseda.html
@@ -1509,7 +1509,15 @@
                     <td class="machine" id="lbm">24</td>
                 </tr>
             </tbody>
+        </table>
 
+
+                                <!-- Year 2025-->
+        
+        <h4 style="color: #fff; width: 100%; text-align: center; background-color: #000; padding: 10px;">Year 2025</h4>
+
+        <table>
+            <caption>ASEDA</caption>
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
@@ -1523,15 +1531,14 @@
                     <td class="winning" id="lbw">34</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">61</td>
+                    <td class="machine">20</td>
+                    <td class="machine">13</td>
+                    <td class="machine">52</td>
+                    <td class="machine" id="lbm">6</td>
                 </tr>
             </tbody>
         </table>
-        <span>Aseda</span>
     </main>
 
 </body>
