--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -1545,6 +1545,29 @@
                 </tr>
             </tbody>
 
+                        <!-- day2-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">2</td>
+                    <td class="days"><small>Jan., 13th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">20</td>
+                    <td class="winning">69</td>
+                    <td class="winning">87</td>
+                    <td class="winning">18</td>
+                    <td class="winning" id="lbw">13</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">46</td>
+                    <td class="machine">80</td>
+                    <td class="machine">10</td>
+                    <td class="machine">55</td>
+                    <td class="machine" id="lbm">35</td>
+                </tr>
+            </tbody>
+
+                        <!-- day3-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
