--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -1522,9 +1522,14 @@
             </tbody>
         </table>
 
-        <table>
+                                                <!-- Year 2025 -->
 
-                                <!-- day1-->
+        <h4 style="color: #fff; width: 100%; text-align: center; background-color: #000; padding: 10px;">Year 2025</h4>
+
+        <table>
+            <caption>LUCKY-G</caption>
+
+                    <!-- day1-->
         <tbody>
             <tr>
                 <td class="serial-num">1</td>
@@ -1545,11 +1550,33 @@
                 <td class="machine" id="lbm">76</td>
             </tr>
         </tbody>
-        <span>LUCKY-G</span>
 
+                    <!-- day2-->
         <tbody>
             <tr>
-                <td class="serial-num"></td>
+                <td class="serial-num">2</td>
+                <td class="days"><small>Jan., 14th</small></td>
+               
+                <!-- winning-->
+                <td class="winning">85</td>
+                <td class="winning">28</td>
+                <td class="winning">81</td>
+                <td class="winning">72</td>
+                <td class="winning" id="lbw">21</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">61</td>
+                <td class="machine">74</td>
+                <td class="machine">3</td>
+                <td class="machine">39</td>
+                <td class="machine" id="lbm">40</td>
+            </tr>
+        </tbody>
+
+                    <!-- day3-->
+        <tbody>
+            <tr>
+                <td class="serial-num">3</td>
                 <td class="days"><small></small></td>
                
                 <!-- winning-->
