--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -1517,11 +1517,11 @@
                     <td class="winning" id="lbw">6</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">77</td>
+                    <td class="machine">42</td>
+                    <td class="machine">32</td>
+                    <td class="machine">14</td>
+                    <td class="machine" id="lbm">61</td>
                 </tr>
             </tbody>
 
