--- a/GAMES/2People.html
+++ b/GAMES/2People.html
@@ -3011,6 +3011,7 @@
                 </tr>
             </tbody>
 
+                        <!-- day2-->
             <tbody>
                 <tr>
                     <td class="serial-num">2</td>
@@ -3032,7 +3033,29 @@
                 </tr>
             </tbody>
 
-                                    <!-- day2-->
+                                    <!-- day3-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">3</td>
+                    <td class="days"><small>Jan., Mon 13th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">67</td>
+                    <td class="winning">25</td>
+                    <td class="winning">16</td>
+                    <td class="winning">51</td>
+                    <td class="winning" id="lbw">48</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">55</td>
+                    <td class="machine">19</td>
+                    <td class="machine">14</td>
+                    <td class="machine">71</td>
+                    <td class="machine" id="lbm">63</td>
+                </tr>
+            </tbody>
+
+                                    <!-- day4-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
