--- a/GAMES/7O6.html
+++ b/GAMES/7O6.html
@@ -3029,7 +3029,29 @@
                 </tr>
             </tbody>
 
-                                    <!-- day-->
+                                    <!-- day3-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">3</td>
+                    <td class="days"><small>Jan., Tues 14th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">86</td>
+                    <td class="winning">62</td>
+                    <td class="winning">20</td>
+                    <td class="winning">74</td>
+                    <td class="winning" id="lbw">61</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">78</td>
+                    <td class="machine">32</td>
+                    <td class="machine">1</td>
+                    <td class="machine">66</td>
+                    <td class="machine" id="lbm">76</td>
+                </tr>
+            </tbody>
+
+                        <!-- day4-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
