--- a/GAMES/8Jackpot.html
+++ b/GAMES/8Jackpot.html
@@ -3032,7 +3032,29 @@
                 </tr>
             </tbody>
 
-                                    <!-- day-->
+                                    <!-- day3-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">3</td>
+                    <td class="days"><small>Jan., Tues 14th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">68</td>
+                    <td class="winning">24</td>
+                    <td class="winning">50</td>
+                    <td class="winning">13</td>
+                    <td class="winning" id="lbw">44</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">48</td>
+                    <td class="machine">58</td>
+                    <td class="machine">10</td>
+                    <td class="machine">43</td>
+                    <td class="machine" id="lbm">67</td>
+                </tr>
+            </tbody>
+
+                                    <!-- day4-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
