--- a/GAMES/12Mark-II.html
+++ b/GAMES/12Mark-II.html
@@ -3047,7 +3047,29 @@
                 </tr>
             </tbody>
 
-                         <!-- day-->
+                        <!-- day3-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">3</td>
+                    <td class="days"><small>Jan., Wed 15th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">13</td>
+                    <td class="winning">69</td>
+                    <td class="winning">17</td>
+                    <td class="winning">78</td>
+                    <td class="winning" id="lbw">60</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">38</td>
+                    <td class="machine">39</td>
+                    <td class="machine">6</td>
+                    <td class="machine">33</td>
+                    <td class="machine" id="lbm">20</td>
+                </tr>
+            </tbody>
+
+                        <!-- day4-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
