--- a/GAMES/16Fair-c.html
+++ b/GAMES/16Fair-c.html
@@ -2976,10 +2976,11 @@
             </tbody>
         </table>
 
-        <h1>Year 2025</h1>
+                    <!-- Year 2025-->
+        <h4 style="color: #fff; width: 100%; text-align: center; background-color: #000; padding: 10px;">Year 2025</h4>
 
         <table>
-            <caption>fairchance</caption>
+            <caption>FAIRCHANCE</caption>
             <thead>
                 <tr>
                     <th class="serial-num">S/N</th>
@@ -3009,7 +3010,6 @@
                 </tr>
             </tbody>
 
-
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
@@ -3031,6 +3031,7 @@
                 </tr>
             </tbody>
 
+                        <!-- day1-->
             <tbody>
                 <tr>
                     <td class="serial-num">1</td>
@@ -3052,7 +3053,7 @@
                 </tr>
             </tbody>
 
-                                    <!-- day2-->
+                        <!-- day2-->
             <tbody>
                 <tr>
                     <td class="serial-num">2</td>
@@ -3075,6 +3076,28 @@
             </tbody>
 
                                     <!-- day3-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">3</td>
+                    <td class="days"><small>Jan., Thurs 16th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">19</td>
+                    <td class="winning">37</td>
+                    <td class="winning">67</td>
+                    <td class="winning">3</td>
+                    <td class="winning" id="lbw">1</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">78</td>
+                    <td class="machine">70</td>
+                    <td class="machine">2</td>
+                    <td class="machine">45</td>
+                    <td class="machine" id="lbm">53</td>
+                </tr>
+            </tbody>
+
+                        <!-- day4-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
