--- a/GAMES/2People.html
+++ b/GAMES/2People.html
@@ -2960,7 +2960,7 @@
         <h4 style="color: #fff; width: 100%; text-align: center; background-color: #000; padding: 10px;">Year 2025</h4>
 
         <table>
-            <caption>Peoples</caption>
+            <caption>PEOPLES</caption>
             <thead>
                 <tr>
                     <th class="serial-num">S/N</th>
@@ -3055,7 +3055,29 @@
                 </tr>
             </tbody>
 
-                                    <!-- day4-->
+                        <!-- day4-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">4</td>
+                    <td class="days"><small>Jan., Thurs 16th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">86</td>
+                    <td class="winning">36</td>
+                    <td class="winning">23</td>
+                    <td class="winning">4</td>
+                    <td class="winning" id="lbw">90</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">58</td>
+                    <td class="machine">7</td>
+                    <td class="machine">24</td>
+                    <td class="machine">64</td>
+                    <td class="machine" id="lbm">61</td>
+                </tr>
+            </tbody>
+
+                        <!-- day5-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
