--- a/GAMES/17Royal.html
+++ b/GAMES/17Royal.html
@@ -3125,7 +3125,29 @@
                 </tr>
             </tbody>
 
+                        <!--day4 -->
+            <tbody>
+                <tr>
+                    <td class="serial-num">4</td>
+                    <td class="days"><small>Jan., Fri 17th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">73</td>
+                    <td class="winning">34</td>
+                    <td class="winning">30</td>
+                    <td class="winning">11</td>
+                    <td class="winning" id="lbw">47</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">53</td>
+                    <td class="machine">63</td>
+                    <td class="machine">50</td>
+                    <td class="machine">19</td>
+                    <td class="machine" id="lbm">20</td>
+                </tr>
+            </tbody>
 
+                        <!-- day5-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
