result updated 26th

--- a/GAMES/12Mark-II.html
+++ b/GAMES/12Mark-II.html
@@ -2952,7 +2952,7 @@
         <h4 style="color: #fff; width: 100%; text-align: center; background-color: #000; padding: 10px;">Year 2025</h4>
 
         <table>
-            <caption>Mark II</caption>
+            <caption>MARK II</caption>
             <thead>
                 <tr>
                     <th class="serial-num">S/N</th>
@@ -3114,6 +3114,28 @@
             </tbody>
 
                         <!-- day6-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">6</td>
+                    <td class="days"><small>Jan., Sun 26th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">29</td>
+                    <td class="winning">26</td>
+                    <td class="winning">11</td>
+                    <td class="winning">23</td>
+                    <td class="winning" id="lbw">52</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">44</td>
+                    <td class="machine">68</td>
+                    <td class="machine">42</td>
+                    <td class="machine">87</td>
+                    <td class="machine" id="lbm">20</td>
+                </tr>
+            </tbody>
+
+                        <!-- day7-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
