--- a/GAMES/20Midweek.html
+++ b/GAMES/20Midweek.html
@@ -1591,11 +1591,11 @@
                     <td class="winning" id="lbw">87</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">48</td>
+                    <td class="machine">49</td>
+                    <td class="machine">28</td>
+                    <td class="machine">35</td>
+                    <td class="machine" id="lbm">53</td>
                 </tr>
             </tbody>
 
