--- a/GAMES/23King.html
+++ b/GAMES/23King.html
@@ -1571,12 +1571,32 @@
                     <td class="machine" id="lbm">34</td>
                 </tr>
             </tbody>
-        </table>
 
                                 <!-- day3-->
         <tbody>
             <tr>
-                <td class="serial-num"></td>
+                <td class="serial-num">3</td>
+                <td class="days"><small>Jan., 25th</small></td>
+               
+                <!-- winning-->
+                <td class="winning">39</td>
+                <td class="winning">86</td>
+                <td class="winning">11</td>
+                <td class="winning">57</td>
+                <td class="winning" id="lbw">59</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">63</td>
+                <td class="machine">87</td>
+                <td class="machine">5</td>
+                <td class="machine">18</td>
+                <td class="machine" id="lbm">60</td>
+            </tr>
+        </tbody>
+                        <!-- day4-->
+        <tbody>
+            <tr>
+                <td class="serial-num">4</td>
                 <td class="days"><small></small></td>
                
                 <!-- winning-->
@@ -1594,6 +1614,7 @@
                 <td class="machine" id="lbm"></td>
             </tr>
         </tbody>
+        </table>
     </main>
 </body>
 </html>
