--- a/GAMES/14Enugu.html
+++ b/GAMES/14Enugu.html
@@ -2950,7 +2950,7 @@
         <h4 style="color: #fff; width: 100%; text-align: center; background-color: #000; padding: 10px;">Year 2025</h4>
 
         <table>
-            <caption>Enugu</caption>
+            <caption>ENUGU</caption>
             <thead>
                 <tr>
                     <th class="serial-num">S/N</th>
@@ -3114,6 +3114,28 @@
             </tbody>
 
                         <!-- day6-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">6</td>
+                    <td class="days"><small>Jan., Sun 26th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">65</td>
+                    <td class="winning">17</td>
+                    <td class="winning">50</td>
+                    <td class="winning">30</td>
+                    <td class="winning" id="lbw">37</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">11</td>
+                    <td class="machine">34</td>
+                    <td class="machine">29</td>
+                    <td class="machine">76</td>
+                    <td class="machine" id="lbm">32</td>
+                </tr>
+            </tbody>
+
+                        <!-- day7-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
