--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -1609,11 +1609,11 @@
                     <td class="winning" id="lbw">60</td>
 
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">48</td>
+                    <td class="machine">68</td>
+                    <td class="machine">17</td>
+                    <td class="machine">26</td>
+                    <td class="machine" id="lbm">77</td>
                 </tr>
             </tbody>
 
