--- a/GAMES/21Fortune.html
+++ b/GAMES/21Fortune.html
@@ -1602,22 +1602,22 @@
                         <!-- day4-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">4</td>
+                    <td class="days"><small>Jan 30th</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">24</td>
+                    <td class="winning">67</td>
+                    <td class="winning">66</td>
+                    <td class="winning">40</td>
+                    <td class="winning" id="lbw">84</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">85</td>
+                    <td class="machine">43</td>
+                    <td class="machine">4</td>
+                    <td class="machine">88</td>
+                    <td class="machine" id="lbm">25</td>
                 </tr>
             </tbody>
         </table>
