--- a/GAMES/7O6.html
+++ b/GAMES/7O6.html
@@ -3142,25 +3142,27 @@
                          <!-- day8-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">8</td>
+                    <td class="days"><small>Feb., Sat 1st</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">43</td>
+                    <td class="winning">34</td>
+                    <td class="winning">28</td>
+                    <td class="winning">84</td>
+                    <td class="winning" id="lbw">89</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">64</td>
+                    <td class="machine">22</td>
+                    <td class="machine">37</td>
+                    <td class="machine">69</td>
+                    <td class="machine" id="lbm">32</td>
                 </tr>
             </tbody>
         </table>
+
+        <span>06</span>
     </main> 
 </body>
 </html>
