--- a/GAMES/2People.html
+++ b/GAMES/2People.html
@@ -3166,6 +3166,28 @@
             </tbody>
 
                         <!-- day9-->
+             <tbody>
+                <tr>
+                    <td class="serial-num">9</td>
+                    <td class="days"><small>Feb., Mon 3rd</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">49</td>
+                    <td class="winning">59</td>
+                    <td class="winning">89</td>
+                    <td class="winning">50</td>
+                    <td class="winning" id="lbw">82</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">34</td>
+                    <td class="machine">4</td>
+                    <td class="machine">44</td>
+                    <td class="machine">9</td>
+                    <td class="machine" id="lbm">86</td>
+                </tr>
+            </tbody>
+
+                        <!-- day10-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
