--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -1611,6 +1611,29 @@
                 </tr>
             </tbody>
 
+                        <!-- day5-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">5</td>
+                    <td class="days"><small>Feb., 3rd</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">60</td>
+                    <td class="winning">51</td>
+                    <td class="winning">69</td>
+                    <td class="winning">14</td>
+                    <td class="winning" id="lbw">81</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">4</td>
+                    <td class="machine">9</td>
+                    <td class="machine">49</td>
+                    <td class="machine">50</td>
+                    <td class="machine" id="lbm">37</td>
+                </tr>
+            </tbody>
+
+                        <!-- day6-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
