--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -1617,7 +1617,29 @@
                 </tr>
             </tbody>
 
-                         <!-- day7-->
+                         <!-- day5-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">5</td>
+                    <td class="days"><small>Feb., 4th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">14</td>
+                    <td class="winning">86</td>
+                    <td class="winning">40</td>
+                    <td class="winning">77</td>
+                    <td class="winning" id="lbw">28</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">85</td>
+                    <td class="machine">82</td>
+                    <td class="machine">36</td>
+                    <td class="machine">76</td>
+                    <td class="machine" id="lbm">53</td>
+                </tr>
+            </tbody>
+
+                        <!-- day6-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
