--- a/GAMES/13Vag.html
+++ b/GAMES/13Vag.html
@@ -3160,22 +3160,22 @@
                         <!-- day9-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">9</td>
+                    <td class="days"><small>Feb., Wed 5th</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">8</td>
+                    <td class="winning">64</td>
+                    <td class="winning">33</td>
+                    <td class="winning">22</td>
+                    <td class="winning" id="lbw">31</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">45</td>
+                    <td class="machine">50</td>
+                    <td class="machine">77</td>
+                    <td class="machine">3</td>
+                    <td class="machine" id="lbm">5</td>
                 </tr>
             </tbody>
         </table>
