--- a/GAMES/20Midweek.html
+++ b/GAMES/20Midweek.html
@@ -1621,7 +1621,29 @@
                 </tr>
             </tbody>
 
-                          <!-- day8-->
+                          <!-- day5-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">5</td>
+                    <td class="days"><small>Feb., 5th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">13</td>
+                    <td class="winning">26</td>
+                    <td class="winning">27</td>
+                    <td class="winning">79</td>
+                    <td class="winning" id="lbw">51</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">81</td>
+                    <td class="machine">69</td>
+                    <td class="machine">61</td>
+                    <td class="machine">73</td>
+                    <td class="machine" id="lbm">62</td>
+                </tr>
+            </tbody>
+
+                           <!-- day6-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
