--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -1647,11 +1647,11 @@
                     <td class="winning" id="lbw">5</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">59</td>
+                    <td class="machine">54</td>
+                    <td class="machine">84</td>
+                    <td class="machine">20</td>
+                    <td class="machine" id="lbm">68</td>
                 </tr>
             </tbody>
 
