--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -1643,7 +1643,7 @@
             <tbody>
                 <tr>
                     <td class="serial-num">6</td>
-                    <td class="days"><small>Feb., 12th</small></td>
+                    <td class="days"><small>Feb., 11th</small></td>
                    
                     <!-- winning-->
                     <td class="winning">29</td>
@@ -1653,11 +1653,11 @@
                     <td class="winning" id="lbw">25</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">56</td>
+                    <td class="machine">79</td>
+                    <td class="machine">9</td>
+                    <td class="machine">18</td>
+                    <td class="machine" id="lbm">12</td>
                 </tr>
             </tbody>
 
