--- a/GAMES/21Fortune.html
+++ b/GAMES/21Fortune.html
@@ -1635,11 +1635,11 @@
                     <td class="winning" id="lbw">4</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">49</td>
+                    <td class="machine">33</td>
+                    <td class="machine">11</td>
+                    <td class="machine">17</td>
+                    <td class="machine" id="lbm">69</td>
                 </tr>
             </tbody>
 
