--- a/GAMES/25Aseda.html
+++ b/GAMES/25Aseda.html
@@ -1620,11 +1620,11 @@
                     <td class="winning" id="lbw">40</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">38</td>
+                    <td class="machine">19</td>
+                    <td class="machine">7</td>
+                    <td class="machine">63</td>
+                    <td class="machine" id="lbm">45</td>
                 </tr>
             </tbody>
 
