fridat 14th Result

--- a/GAMES/11Tota.html
+++ b/GAMES/11Tota.html
@@ -3249,7 +3249,7 @@
                         <!-- day11-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
+                    <td class="serial-num">11</td>
                     <td class="days"><small></small></td>
                    
                     <!-- winning-->
