--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -1669,11 +1669,11 @@
                     <td class="winning" id="lbw">65</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">84</td>
+                    <td class="machine">52</td>
+                    <td class="machine">28</td>
+                    <td class="machine">87</td>
+                    <td class="machine" id="lbm">79</td>
                 </tr>
             </tbody>
 
