--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -1650,11 +1650,11 @@
                     <td class="winning" id="lbw">12</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">53</td>
+                    <td class="machine">25</td>
+                    <td class="machine">81</td>
+                    <td class="machine">82</td>
+                    <td class="machine" id="lbm">10</td>
                 </tr>
             </tbody>
 
