--- a/GAMES/25Aseda.html
+++ b/GAMES/25Aseda.html
@@ -1664,11 +1664,11 @@
                     <td class="winning" id="lbw">42</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">22</td>
+                    <td class="machine">61</td>
+                    <td class="machine">71</td>
+                    <td class="machine">11</td>
+                    <td class="machine" id="lbm">31</td>
                 </tr>
             </tbody>
 
