--- a/GAMES/8Jackpot.html
+++ b/GAMES/8Jackpot.html
@@ -3252,7 +3252,29 @@
                 </tr>
             </tbody>
 
-                        <!-- day12-->
+                        <!-- day13-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">13</td>
+                    <td class="days"><small>Feb., Tues 18th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">77</td>
+                    <td class="winning">46</td>
+                    <td class="winning">56</td>
+                    <td class="winning">2</td>
+                    <td class="winning" id="lbw">36</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">73</td>
+                    <td class="machine">72</td>
+                    <td class="machine">41</td>
+                    <td class="machine">10</td>
+                    <td class="machine" id="lbm">87</td>
+                </tr>
+            </tbody>
+
+                         <!-- day14-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
