--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -1650,11 +1650,11 @@
                     <td class="winning" id="lbw">43</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">51</td>
+                    <td class="machine">38</td>
+                    <td class="machine">40</td>
+                    <td class="machine">35</td>
+                    <td class="machine" id="lbm">41</td>
                 </tr>
             </tbody>
 
