update all results

--- a/GAMES/16Fair-c.html
+++ b/GAMES/16Fair-c.html
@@ -3295,7 +3295,29 @@
                 </tr>
             </tbody>
 
-                        <!-- day12-->
+                        <!-- day13-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">13</td>
+                    <td class="days"><small>Feb., Thurs 20th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">4</td>
+                    <td class="winning">63</td>
+                    <td class="winning">44</td>
+                    <td class="winning">26</td>
+                    <td class="winning" id="lbw">55</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">42</td>
+                    <td class="machine">57</td>
+                    <td class="machine">12</td>
+                    <td class="machine">15</td>
+                    <td class="machine" id="lbm">20</td>
+                </tr>
+            </tbody>
+
+                        <!-- day14-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
