results update to Sunday 23rd

--- a/GAMES/20Midweek.html
+++ b/GAMES/20Midweek.html
@@ -1499,6 +1499,7 @@
             </tbody>
         </table>
 
+        <hr style="height: 8px;">
         <table>
             <caption>MIDWEEK</caption>
             <thead>
@@ -1679,18 +1680,18 @@
                     <td class="winning" id="lbw">38</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">54</td>
+                    <td class="machine">64</td>
+                    <td class="machine">43</td>
+                    <td class="machine">65</td>
+                    <td class="machine" id="lbm">75</td>
                 </tr>
             </tbody>
 
                         <!-- day8-->
             <tbody>
                 <tr>
-                    <td class="serial-num">8</td>
+                    <td class="serial-num"></td>
                     <td class="days"><small></small></td>
                    
                     <!-- winning-->
