--- a/GAMES/21Fortune.html
+++ b/GAMES/21Fortune.html
@@ -1679,11 +1679,11 @@
                     <td class="winning" id="lbw">82</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">10</td>
+                    <td class="machine">78</td>
+                    <td class="machine">86</td>
+                    <td class="machine">66</td>
+                    <td class="machine" id="lbm">81</td>
                 </tr>
             </tbody>
 
