--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -1672,18 +1672,18 @@
                     <td class="winning" id="lbw">57</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">25</td>
+                    <td class="machine">80</td>
+                    <td class="machine">8</td>
+                    <td class="machine">53</td>
+                    <td class="machine" id="lbm">89</td>
                 </tr>
             </tbody>
 
                         <!-- day8-->
             <tbody>
                 <tr>
-                    <td class="serial-num">11</td>
+                    <td class="serial-num"></td>
                     <td class="days"><small></small></td>
                    
                     <!-- winning-->
