--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -1682,22 +1682,22 @@
                         <!-- day8-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">8</td>
+                    <td class="days"><small>Feb., 24th</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">6</td>
+                    <td class="winning">89</td>
+                    <td class="winning">19</td>
+                    <td class="winning">68</td>
+                    <td class="winning" id="lbw">43</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">38</td>
+                    <td class="machine">39</td>
+                    <td class="machine">41</td>
+                    <td class="machine">2</td>
+                    <td class="machine" id="lbm">33</td>
                 </tr>
             </tbody>
         </table>
