result update 26th Feb

--- a/GAMES/3Bingo.html
+++ b/GAMES/3Bingo.html
@@ -3294,8 +3294,8 @@
                         <!-- day15-->
             <tbody>
                 <tr>
-                    <td class="serial-num">Feb., Mon 24th</td>
-                    <td class="days"><small>15</small></td>
+                    <td class="serial-num">15</td>
+                    <td class="days"><small>Feb., Mon 24th</small></td>
                    
                     <!-- winning-->
                     <td class="winning">78</td>
