--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -1700,11 +1700,11 @@
                     <td class="winning" id="lbw">26</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">61</td>
+                    <td class="machine">54</td>
+                    <td class="machine">46</td>
+                    <td class="machine">8</td>
+                    <td class="machine" id="lbm">24</td>
                 </tr>
             </tbody>
 
