Sun 10th, Mon 11th and Tues 12th results

--- a/GAMES/15Lucky.html
+++ b/GAMES/15Lucky.html
@@ -3381,22 +3381,22 @@
                         <!-- day18-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">18</td>
+                    <td class="days"><small>Mar., Sun 9th</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">71</td>
+                    <td class="winning">70</td>
+                    <td class="winning">72</td>
+                    <td class="winning">85</td>
+                    <td class="winning" id="lbw">57</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">29</td>
+                    <td class="machine">8</td>
+                    <td class="machine">24</td>
+                    <td class="machine">35</td>
+                    <td class="machine" id="lbm">25</td>
                 </tr>
             </tbody>
 
