--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -1726,22 +1726,22 @@
                         <!-- day10-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">10</td>
+                    <td class="days"><small>Mar., 10th</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">78</td>
+                    <td class="winning">67</td>
+                    <td class="winning">68</td>
+                    <td class="winning">54</td>
+                    <td class="winning" id="lbw">40</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">24</td>
+                    <td class="machine">64</td>
+                    <td class="machine">50</td>
+                    <td class="machine">72</td>
+                    <td class="machine" id="lbm">2</td>
                 </tr>
             </tbody>
 
