--- a/GAMES/5Inter.html
+++ b/GAMES/5Inter.html
@@ -3384,22 +3384,22 @@
                        <!-- day19-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">19</td>
+                    <td class="days"><small>Mar., Mon 10th</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">2</td>
+                    <td class="winning">83</td>
+                    <td class="winning">72</td>
+                    <td class="winning">47</td>
+                    <td class="winning" id="lbw">90</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">50</td>
+                    <td class="machine">57</td>
+                    <td class="machine">80</td>
+                    <td class="machine">38</td>
+                    <td class="machine" id="lbm">31</td>
                 </tr>
             </tbody>
 
