--- a/GAMES/6Gold.html
+++ b/GAMES/6Gold.html
@@ -3385,22 +3385,22 @@
                         <!-- day19-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">19</td>
+                    <td class="days"><small>Mar Tues 12th</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">44</td>
+                    <td class="winning">74</td>
+                    <td class="winning">14</td>
+                    <td class="winning">89</td>
+                    <td class="winning" id="lbw">35</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">13</td>
+                    <td class="machine">4</td>
+                    <td class="machine">45</td>
+                    <td class="machine">88</td>
+                    <td class="machine" id="lbm">68</td>
                 </tr>
             </tbody>
 
