--- a/GAMES/7O6.html
+++ b/GAMES/7O6.html
@@ -3384,22 +3384,22 @@
                         <!-- day19-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">19</td>
+                    <td class="days"><small>Mar., Tues 11th</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">39</td>
+                    <td class="winning">37</td>
+                    <td class="winning">36</td>
+                    <td class="winning">63</td>
+                    <td class="winning" id="lbw">1</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">48</td>
+                    <td class="machine">68</td>
+                    <td class="machine">59</td>
+                    <td class="machine">35</td>
+                    <td class="machine" id="lbm">33</td>
                 </tr>
             </tbody>
 
