--- a/GAMES/8Jackpot.html
+++ b/GAMES/8Jackpot.html
@@ -3387,22 +3387,22 @@
                         <!-- day19-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">19</td>
+                    <td class="days"><small>Mar., Tues 11th</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">73</td>
+                    <td class="winning">37</td>
+                    <td class="winning">45</td>
+                    <td class="winning">71</td>
+                    <td class="winning" id="lbw">11</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">72</td>
+                    <td class="machine">42</td>
+                    <td class="machine">2</td>
+                    <td class="machine">57</td>
+                    <td class="machine" id="lbm">68</td>
                 </tr>
             </tbody>
 
