--- a/GAMES/10Super.html
+++ b/GAMES/10Super.html
@@ -3382,22 +3382,22 @@
                         <!-- day19-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">19</td>
+                    <td class="days"><small>Mar., Tues 11th</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">26</td>
+                    <td class="winning">15</td>
+                    <td class="winning">72</td>
+                    <td class="winning">59</td>
+                    <td class="winning" id="lbw">18</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">30</td>
+                    <td class="machine">20</td>
+                    <td class="machine">54</td>
+                    <td class="machine">32</td>
+                    <td class="machine" id="lbm">82</td>
                 </tr>
             </tbody>
 
