--- a/GAMES/11Tota.html
+++ b/GAMES/11Tota.html
@@ -3381,22 +3381,22 @@
                         <!-- day18-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">18</td>
+                    <td class="days"><small>Mar., Sun 9th</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">29</td>
+                    <td class="winning">85</td>
+                    <td class="winning">54</td>
+                    <td class="winning">19</td>
+                    <td class="winning" id="lbw">10</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">46</td>
+                    <td class="machine">45</td>
+                    <td class="machine">1</td>
+                    <td class="machine">87</td>
+                    <td class="machine" id="lbm">42</td>
                 </tr>
             </tbody>
 
