--- a/GAMES/12Mark-II.html
+++ b/GAMES/12Mark-II.html
@@ -3380,22 +3380,22 @@
                         <!-- day18-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">18</td>
+                    <td class="days"><small>Mar., Sun 9th </small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">40</td>
+                    <td class="winning">83</td>
+                    <td class="winning">28</td>
+                    <td class="winning">19</td>
+                    <td class="winning" id="lbw">15</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">32</td>
+                    <td class="machine">64</td>
+                    <td class="machine">66</td>
+                    <td class="machine">11</td>
+                    <td class="machine" id="lbm">26</td>
                 </tr>
             </tbody>
 
