--- a/GAMES/14Enugu.html
+++ b/GAMES/14Enugu.html
@@ -3380,22 +3380,22 @@
                         <!-- day18-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">18</td>
+                    <td class="days"><small>Mar., Sun 9th</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">44</td>
+                    <td class="winning">6</td>
+                    <td class="winning">51</td>
+                    <td class="winning">12</td>
+                    <td class="winning" id="lbw">13</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">4</td>
+                    <td class="machine">65</td>
+                    <td class="machine">53</td>
+                    <td class="machine">83</td>
+                    <td class="machine" id="lbm">74</td>
                 </tr>
             </tbody>
 
