--- a/GAMES/17Royal.html
+++ b/GAMES/17Royal.html
@@ -3458,22 +3458,22 @@
                         <!-- day18-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">18</td>
+                    <td class="days"><small>Mar., Sun 9th</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">18</td>
+                    <td class="winning">46</td>
+                    <td class="winning">69</td>
+                    <td class="winning">72</td>
+                    <td class="winning" id="lbw">32</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">89</td>
+                    <td class="machine">14</td>
+                    <td class="machine">20</td>
+                    <td class="machine">30</td>
+                    <td class="machine" id="lbm">1</td>
                 </tr>
             </tbody>
 
