--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -1733,22 +1733,22 @@
                         <!-- day10-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">10</td>
+                    <td class="days"><small>Mar., 11th</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">6</td>
+                    <td class="winning">90</td>
+                    <td class="winning">26</td>
+                    <td class="winning">55</td>
+                    <td class="winning" id="lbw">27</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">76</td>
+                    <td class="machine">46</td>
+                    <td class="machine">80</td>
+                    <td class="machine">47</td>
+                    <td class="machine" id="lbm">13</td>
                 </tr>
             </tbody>
 
