--- a/GAMES/3Bingo.html
+++ b/GAMES/3Bingo.html
@@ -3382,22 +3382,22 @@
                        <!-- day19-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">19</td>
+                    <td class="days"><small>Mar., Mon 10th</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">28</td>
+                    <td class="winning">54</td>
+                    <td class="winning">30</td>
+                    <td class="winning">84</td>
+                    <td class="winning" id="lbw">75</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">72</td>
+                    <td class="machine">83</td>
+                    <td class="machine">41</td>
+                    <td class="machine">10</td>
+                    <td class="machine" id="lbm">40</td>
                 </tr>
             </tbody>
 
