--- a/GAMES/9Club-m.html
+++ b/GAMES/9Club-m.html
@@ -3382,22 +3382,22 @@
                         <!-- day19-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">19</td>
+                    <td class="days"><small>Mar., Tues 11th</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">88</td>
+                    <td class="winning">84</td>
+                    <td class="winning">22</td>
+                    <td class="winning">12</td>
+                    <td class="winning" id="lbw">20</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">10</td>
+                    <td class="machine">11</td>
+                    <td class="machine">8</td>
+                    <td class="machine">45</td>
+                    <td class="machine" id="lbm">61</td>
                 </tr>
             </tbody>
 
