--- a/GAMES/15Lucky.html
+++ b/GAMES/15Lucky.html
@@ -3400,7 +3400,29 @@
                 </tr>
             </tbody>
 
-                          <!-- day16-->
+                          <!-- day19-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">19</td>
+                    <td class="days"><small>Mar., Wed 12th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">40</td>
+                    <td class="winning">59</td>
+                    <td class="winning">11</td>
+                    <td class="winning">21</td>
+                    <td class="winning" id="lbw">64</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">26</td>
+                    <td class="machine">7</td>
+                    <td class="machine">47</td>
+                    <td class="machine">63</td>
+                    <td class="machine" id="lbm">86</td>
+                </tr>
+            </tbody>
+
+                          <!-- day20-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
