March 15th & 16th, 2025

--- a/GAMES/12Mark-II.html
+++ b/GAMES/12Mark-II.html
@@ -3421,7 +3421,29 @@
                 </tr>
             </tbody>
 
-                          <!-- day19-->
+                          <!-- day20-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">20</td>
+                    <td class="days"><small>Mar., Sun 16th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">76</td>
+                    <td class="winning">86</td>
+                    <td class="winning">28</td>
+                    <td class="winning">41</td>
+                    <td class="winning" id="lbw">7</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">71</td>
+                    <td class="machine">49</td>
+                    <td class="machine">68</td>
+                    <td class="machine">47</td>
+                    <td class="machine" id="lbm">11</td>
+                </tr>
+            </tbody>
+
+                         <!-- day21-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
