--- a/GAMES/23King.html
+++ b/GAMES/23King.html
@@ -1728,22 +1728,22 @@
                         <!-- day10-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">10</td>
+                    <td class="days"><small>Mar., Sat 15th</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">33</td>
+                    <td class="winning">48</td>
+                    <td class="winning">7</td>
+                    <td class="winning">25</td>
+                    <td class="winning" id="lbw">39</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">30</td>
+                    <td class="machine">13</td>
+                    <td class="machine">67</td>
+                    <td class="machine">62</td>
+                    <td class="machine" id="lbm">77</td>
                 </tr>
             </tbody>
 
