--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -1727,22 +1727,22 @@
                         <!-- day10-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">10</td>
+                    <td class="days"><small>Mar., 15th</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">9</td>
+                    <td class="winning">29</td>
+                    <td class="winning">28</td>
+                    <td class="winning">7</td>
+                    <td class="winning" id="lbw">67</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">49</td>
+                    <td class="machine">26</td>
+                    <td class="machine">18</td>
+                    <td class="machine">43</td>
+                    <td class="machine" id="lbm">68</td>
                 </tr>
             </tbody>
 
